[tool.poetry]
name = "joj-elephant"
version = "0.1.0"
description = "JOJ Problem Config Middleware"
authors = ["JOJ Dev Team"]
license = "MIT"
packages = [
    { include = "joj" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
rarfile = "^4.0"
python-rapidjson = "^1.4"
gitignore-parser = "^0.0.8"
fs = "^2.4.13"
fs-s3fs = "^1.1.1"
aiofiles = "^0.7.0"
loguru = "^0.5.3"
asynctest = {version = "^0.13.0", optional = true}
coverage = {version = "^5.5", optional = true}
pytest = {version = "^6.2.5", optional = true}
pytest-asyncio = {version = "^0.15.1", optional = true}
pytest-cov = {version = "^2.12.1", optional = true}
pytest-depends = {version = "^1.0.1", optional = true}
pytest-lazy-fixture = {version = "^0.6.3", optional = true}
lakefs-client = {version = "^0.55.0", optional = true}
patool = "^1.12"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[tool.poetry.extras]
test = [
    "asynctest",
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-depends",
    "pytest-lazy-fixture",
    "lakefs-client",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
