[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
exclude = [
    'rclone_async\.py$',
]
follow_imports = "normal"
no_implicit_reexport = true
plugins = "pydantic.mypy"
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.poetry]
authors = ["JOJ Dev Team"]
description = "JOJ Problem Config Middleware"
license = "MIT"
name = "joj-elephant"
packages = [
    { include = "joj" },
]
version = "0.1.0"

[tool.poetry.dependencies]
aiofiles = "^0.7.0"
asynctest = {version = "^0.13.0", optional = true}
coverage = {version = "^5.5", optional = true}
fs = "^2.4.13"
fs-s3fs = "^1.1.1"
gitignore-parser = "^0.0.8"
lakefs-client = {version = "^0.55.0", optional = true}
loguru = "^0.5.3"
orjson = "^3.6.7"
patool = "^1.12"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
pytest = {version = "^6.2.5", optional = true}
pytest-asyncio = {version = "^0.15.1", optional = true}
pytest-cov = {version = "^2.12.1", optional = true}
pytest-depends = {version = "^1.0.1", optional = true}
pytest-lazy-fixture = {version = "^0.6.3", optional = true}
python = "^3.8"
rarfile = "^4.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
pre-commit = "^2.15.0"

[tool.poetry.extras]
test = [
    "asynctest",
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-depends",
    "pytest-lazy-fixture",
    "lakefs-client",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
