[metadata]
name = joj-elephant
version = 0.0.1
author = JOJ Dev Team
author-email = liuyh615@126.com
summary = JOJ Problem Config Middleware
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source Code = https://github.com/joint-online-judge/elephant
license = MIT
keywords =
    oj

[files]
packages =
    joj.elephant
